--- a/services/src/main/resources/config/service.properties
+++ b/services/src/main/resources/config/service.properties
@@ -1,4 +1,4 @@
 page.size=5000
-datasource.list=sqlserver.fsmzDataSource
+datasource.list=mysql.rk
 #sqlserver.zlDataSource,sqlserver.fsDataSource,sqlserver.fsmzDataSource
 #mysql.yxzwDataSource,mysql.jkctDataSource,mysql.tnbDataSource,mysql.yxDataSource,mysql.xzdmDataSource
