--- a/services/src/main/resources/config/service.properties
+++ b/services/src/main/resources/config/service.properties
@@ -1,4 +1,4 @@
 page.size=5000
-datasource.list=mysql.rk
+datasource.list=mysql.ganai
 #sqlserver.zlDataSource,sqlserver.fsDataSource,sqlserver.fsmzDataSource
-#mysql.yxzwDataSource,mysql.jkctDataSource,mysql.tnbDataSource,mysql.yxDataSource,mysql.xzdmDataSource
+#mysql.yxzwDataSource,mysql.jkctDataSource,mysql.tnbDataSource,mysql.yxDataSource,mysql.xzdmDataSource,mysql.ganai
