--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ subprojects {
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
-    version = '1.0.0'
+    version = '0.0.1-SNAPSHOT'
 
     [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
 
