--- a/dataProcess/src/main/resources/application.properties
+++ b/dataProcess/src/main/resources/application.properties
@@ -68,6 +68,11 @@ mysql.xiazhidongmaixiangguan.url=jdbc:mysql://rm-bp1a049g618bz7l2q.mysql.rds.ali
 mysql.xiazhidongmaixiangguan.username=health
 mysql.xiazhidongmaixiangguan.password=Yiy1health_2017
 mysql.xiazhidongmaixiangguan.driver-class-name=com.mysql.jdbc.Driver
+#mysql.ganai
+mysql.ganai.url=jdbc:mysql://rm-bp1a049g618bz7l2q.mysql.rds.aliyuncs.com:3306/ganai?autoReconnect=true
+mysql.ganai.username=health
+mysql.ganai.password=Yiy1health_2017
+mysql.ganai.driver-class-name=com.mysql.jdbc.Driver
 #
 mysql.rk.url=jdbc:mysql://rm-bp191mn7925119b5awo.mysql.rds.aliyuncs.com:3306/rk?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
 mysql.rk.username=root
