--- a/dataProcess/src/main/resources/application-dev.properties
+++ b/dataProcess/src/main/resources/application-dev.properties
@@ -27,5 +27,10 @@ mongodb.hdpb.port=27017
 mongodb.hdpb.database=HDPB
 mongodb.hdpb.password=aron
 mongodb.hdpb.username=aron
+#
+mysql.rk.url=jdbc:mysql://localhost:3306/local?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
+mysql.rk.username=root
+mysql.rk.password=woshixuhu1217
+mysql.rk.driver-class-name=com.mysql.jdbc.Driver
 #server port
 server.port=8666
