--- a/dataProcess/src/main/resources/application.properties
+++ b/dataProcess/src/main/resources/application.properties
@@ -4,6 +4,11 @@ logging.level.com.example=INFO
 logging.file=./logs/server.log
 #thymeleaf
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
 #spring.jpa.show-sql=true
 #设置连接超时时间为1分钟
 spring.datasource.connection-timeout=60000
