--- a/functions/build.gradle
+++ b/functions/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
     compile group: 'com.aliasi', name: 'lingpipe', version: '4.0.1'
     compile group: 'org.apache.stratos', name: 'net.schmizz.sshj', version: '0.8.1'
+    testCompile 'junit:junit:4.11'
 }
