--- a/functions/build.gradle
+++ b/functions/build.gradle
@@ -5,8 +5,8 @@ dependencies {
     compile 'org.projectlombok:lombok'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.41'
-    compile group: 'org.apache.poi', name: 'poi', version: '3.17'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
+//    compile group: 'org.apache.poi', name: 'poi', version: '3.8'
+//    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.8'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
     compile group: 'com.aliasi', name: 'lingpipe', version: '4.0.1'
     compile group: 'org.apache.stratos', name: 'net.schmizz.sshj', version: '0.8.1'
